WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29596
[Qt] Clipping problem viewing SVG with WebKit
https://bugs.webkit.org/show_bug.cgi?id=29596
Summary
[Qt] Clipping problem viewing SVG with WebKit
Tor Arne Vestbø
Reported
2009-09-21 09:01:52 PDT
This bug report originated from Nokia internal issue QT-1209 --- Description --- Test case SVG file can be found in original mail task 243781. The file is displayed as a rectangle in the Qt browser, while it displays as an M in IE (with Adobe plugin), Firefox, and the WebKit powered browsers Safari and Chrome.
Attachments
testcase
(7.35 KB, image/svg+xml)
2009-11-24 07:42 PST
,
Simon Hausmann
no flags
Details
Proposed patch
(1.42 KB, patch)
2010-10-12 06:50 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2009-10-15 01:08:52 PDT
> Test case SVG file can be found in original mail task 243781.
Is this test accessible now?
Simon Hausmann
Comment 2
2009-11-24 07:42:24 PST
Created
attachment 43768
[details]
testcase
Simon Hausmann
Comment 3
2009-11-24 07:43:20 PST
(In reply to
comment #1
)
> > Test case SVG file can be found in original mail task 243781. > Is this test accessible now?
Sorry, it got lost on the way. I've attached it now. Seems to still happen with QtWebKit ToT.
Nikolas Zimmermann
Comment 4
2010-07-09 07:13:41 PDT
Changed component to SVG, so it shows up in my all-svg-bugs search.
Andreas Kling
Comment 5
2010-10-12 06:50:47 PDT
Created
attachment 70528
[details]
Proposed patch
Antonio Gomes
Comment 6
2010-10-12 06:51:53 PDT
Comment on
attachment 70528
[details]
Proposed patch I trust you.
Andreas Kling
Comment 7
2010-10-12 07:05:52 PDT
Comment on
attachment 70528
[details]
Proposed patch Clearing flags on attachment: 70528 Committed
r69579
: <
http://trac.webkit.org/changeset/69579
>
Andreas Kling
Comment 8
2010-10-12 07:06:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug