2010-10-12  Andreas Kling  <kling@webkit.org>

Reviewed by Antonio Gomes.

        [Qt] Clipping problem viewing SVG with WebKit
        https://bugs.webkit.org/show_bug.cgi?id=29596

        SVG path clipping (via GraphicsContext::clipPath()) was done using the
        Qt::ReplaceClip mode (default) instead of Qt::IntersectClip. This led
        to misrenderings when nesting multiple clip paths.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::clipPath):


Canonical link: https://commits.webkit.org/60174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69579 268f45cc-cd09-0410-ab3c-d52691b4dbfc